--- a/home.html
+++ b/home.html
@@ -1,14 +1,13 @@
-<!DOCTUPE>
-<html lang="ar">
+<!DOCTUPE html>
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8">
-  <title>hallo world</title>
-  </head>
-<body>
-<small>WELLCOM TO CREEPY COMPAN</small>
- <p>BY:RADIO</p>
- <br>
+    <title>creepy company</title>
  
-</body>
+  </head>
+  <body>
 
+</form>
+
+  </body>
 </html>
