--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <span class="close-btn" onclick="closeSidebar()">×</span>
   <a href="#">الرئيسية</a>
   <a href="#">من نحن</a>
+  <a href="#">المشروعات الاخره</a>
   <a href="#">الخدمات</a>
   <a href="#">اتصل بنا</a>
 </div>
