--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <!-- القائمة الجانبية -->
 <div id="mySidebar" class="sidebar">
   <span class="close-btn" onclick="closeSidebar()">×</span>
-  <a href="#">الرئيسية</a>
-  <a href="#">من نحن</a>
-  <a href="#">المشروعات الاخره</a>
-  <a href="#">الخدمات</a>
-  <a href="#">اتصل بنا</a>
+  <a href="#"><i class="fa-solid fa-house"></i> الرئيسية</a>
+<a href="#"><i class="fa-solid fa-laptop-code"></i> المطورون</a>
+<a href="#"><i class="fa-solid fa-folder-tree"></i> المشاريع</a>
+<a href="#"><i class="fa-solid fa-message"></i> للتواصل</a>
+<a href="#"><i class="fa-solid fa-bullhorn"></i> القنوات</a>
+<a href="#"><i class="fa-solid fa-box-open"></i> المنتجات</a>
 </div>
 
 <!-- سكريبت فتح وإغلاق القائمة -->
