--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- القائمة الجانبية -->
 <div id="sidebar" class="sidebar">
-  <a href="#"><i class="fas fa-home"></i><span>Home</span></a>
+  <a href="page.html"><i class="fas fa-home"></i><span>Home</span></a>
   <a href="#"><i class="fas fa-code"></i><span>Developers</span></a>
   <a href="#"><i class="fas fa-project-diagram"></i><span>Projects</span></a>
   <a href="#"><i class="fas fa-comments"></i><span>Contact</span></a>
