--- a/page.html
+++ b/page.html
@@ -24,8 +24,8 @@
   <a href="#"><i class="fas fa-broadcast-tower"></i><span>Channels</span></a>
   <a href="#"><i class="fas fa-box-open"></i><span>Products</span></a>
 </div>
-
-<!-- زخارف -->
+hllo
+  <!-- زخارف -->
 <div class="decorations"></div>
 
 <!-- سكربت -->
