--- a/page.html
+++ b/page.html
@@ -24,7 +24,28 @@
   <a href="#"><i class="fas fa-broadcast-tower"></i><span>Channels</span></a>
   <a href="#"><i class="fas fa-box-open"></i><span>Products</span></a>
 </div>
-hllo
+<!-- عنوان مزخرف -->
+<h1 class="neon-title">✦✹ مرحباً بك في صفحة مطوري فريق Creepy ✹✦</h1>
+
+<!-- مربعات المطورين -->
+<div class="dev-container">
+  <div class="dev-card blood-effect">
+    <h2>Radio / Dev</h2>
+    <p>بوته: Furina</p>
+  </div>
+  <div class="dev-card blood-effect">
+    <h2>mando</h2>
+    <p>غير محدد</p>
+  </div>
+  <div class="dev-card blood-effect">
+    <h2>malak</h2>
+    <p>بوته: Kito</p>
+  </div>
+  <div class="dev-card blood-effect">
+    <h2>anas</h2>
+    <p>بوته: Mikey</p>
+  </div>
+</div>
   <!-- زخارف -->
 <div class="decorations"></div>
 
