--- a/page.html
+++ b/page.html
@@ -17,7 +17,7 @@
 
 <!-- القائمة الجانبية -->
 <div id="sidebar" class="sidebar">
-  <a href="page.html"><i class="fas fa-home"></i><span>Home</span></a>
+  <a href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
   <a href="#"><i class="fas fa-code"></i><span>Developers</span></a>
   <a href="#"><i class="fas fa-project-diagram"></i><span>Projects</span></a>
   <a href="#"><i class="fas fa-comments"></i><span>Contact</span></a>
@@ -25,7 +25,7 @@
   <a href="#"><i class="fas fa-box-open"></i><span>Products</span></a>
 </div>
 <!-- عنوان مزخرف -->
-<h1 class="neon-title">✦✹ مرحباً بك في صفحة مطوري فريق Creepy ✹✦</h1>
+<h1 class="neon-title">مرحباً بك في صفحة مطوري فريق Creepy</h1>
 
 <!-- مربعات المطورين -->
 <div class="dev-container">
