--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a href="#"><i class="fas fa-broadcast-tower"></i><span>Channels</span></a>
   <a href="#"><i class="fas fa-box-open"></i><span>Products</span></a>
 </div>
-
+<h1 class="main-welcome"> مرحباً بك في الموقع الرسمي لفريق Creepy</h1>
 <!-- زخارف -->
 <div class="decorations"></div>
 
