--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <a href="#"><i class="fas fa-box-open"></i><span>Products</span></a>
 </div>
 <h1 class="main-welcome"> مرحباً بك في الموقع الرسمي لفريق Creepy</h1>
+  <section class="intro">
+  <p>نحن فريق <strong>Creepy</strong> المتخصصون في تطوير البوتات والمشاريع التقنية الغامضة والمميزة 👁‍🗨</p>
+  <p>انضم إلينا واستكشف عالمنا الدموي المظلم.</p>
+  </section>
 <!-- زخارف -->
 <div class="decorations"></div>
 
