--- a/index.html
+++ b/index.html
@@ -15,72 +15,58 @@
   <header class="navbar">
     <div class="container">
       <button class="menu-button" onclick="toggleMenu()">☰ Menu</button>
+      <button class="lang-toggle" onclick="toggleLanguage()">🌐 عربي</button>
       <nav id="menuList" class="menu-list hidden">
-        <a href="index.html">Home</a>
-        <a href="info.html">Info</a>
-        <a href="projects.html">Projects</a>
-        <a href="channels.html">Channels</a>
-        <a href="contact.html">Contact</a>
-        <a href="products.html">Products</a>
+        <a href="index.html" data-en="Home" data-ar="الرئيسية">Home</a>
+        <a href="info.html" data-en="Info" data-ar="معلومات">Info</a>
+        <a href="projects.html" data-en="Projects" data-ar="مشاريع">Projects</a>
+        <a href="channels.html" data-en="Channels" data-ar="القنوات">Channels</a>
+        <a href="contact.html" data-en="Contact" data-ar="للتواصل">Contact</a>
+        <a href="products.html" data-en="Products" data-ar="المنتجات">Products</a>
       </nav>
     </div>
   </header>
-<!-- الزر في الشريط العلوي -->
-<button class="lang-toggle" onclick="toggleLanguage()">🌐 عربي</button>
-  <header class="navbar">
-  <div class="container">
-    <button class="menu-button" onclick="toggleMenu()">☰ Menu</button>
-    <button class="lang-toggle" onclick="toggleLanguage()">🌐 عربي</button>
-    <nav id="menuList" class="menu-list hidden">
-      <a href="#" data-en="Home" data-ar="الرئيسية">Home</a>
-      <a href="#" data-en="Info" data-ar="معلومات">Info</a>
-      <a href="#" data-en="Projects" data-ar="مشاريع">Projects</a>
-      <a href="#" data-en="Channels" data-ar="القنوات">Channels</a>
-      <a href="#" data-en="Contact" data-ar="للتواصل">Contact</a>
-      <a href="#" data-en="Products" data-ar="المنتجات">Products</a>
-    </nav>
-  </div>
-</header>
 
-<main class="main-content">
-  <h1 class="main-title" data-en="Welcome to Alastor's Bloody Realm" data-ar="مرحبًا بك في عالم ألاستور الدموي">Welcome</h1>
-  <p class="main-subtitle" data-en="Explore the dark side of creativity & code 🩸" data-ar="اكتشف الجانب المظلم من الإبداع والبرمجة 🩸">Explore</p>
-</main>
-  <!-- العنوان -->
+  <!-- المحتوى الرئيسي -->
   <main class="main-content">
-    <h1 class="main-title">Welcome to Alastor's Bloody Realm</h1>
-    <p class="main-subtitle">Explore the dark side of creativity & code 🩸</p>
+    <h1 class="main-title" data-en="Welcome to Alastor's Bloody Realm" data-ar="مرحبًا بك في عالم ألاستور الدموي">
+      Welcome to Alastor's Bloody Realm
+    </h1>
+    <p class="main-subtitle" data-en="Explore the dark side of creativity & code 🩸" data-ar="اكتشف الجانب المظلم من الإبداع والبرمجة 🩸">
+      Explore the dark side of creativity & code 🩸
+    </p>
   </main>
 
+  <!-- سكريبتات -->
   <script src="background.js"></script>
   <script>
     function toggleMenu() {
       const menu = document.getElementById("menuList");
       menu.classList.toggle("hidden");
       menu.classList.toggle("fade-in");
-      function toggleLanguage() {
-    const currentLang = localStorage.getItem("lang") || "en";
-    const newLang = currentLang === "en" ? "ar" : "en";
-    localStorage.setItem("lang", newLang);
-    applyLanguage(newLang);
-  }
-
-  function applyLanguage(lang) {
-    const elements = document.querySelectorAll("[data-en]");
-    elements.forEach(el => {
-      el.textContent = el.getAttribute(`data-${lang}`);
-    });
-    const langBtn = document.querySelector(".lang-toggle");
-    langBtn.textContent = lang === "en" ? "🌐 عربي" : "🌐 English";
-    document.body.dir = lang === "ar" ? "rtl" : "ltr";
-  }
-
-  // عند التحميل
-  window.addEventListener("DOMContentLoaded", () => {
-    const savedLang = localStorage.getItem("lang") || "en";
-    applyLanguage(savedLang);
-  });
     }
+
+    function toggleLanguage() {
+      const currentLang = localStorage.getItem("lang") || "en";
+      const newLang = currentLang === "en" ? "ar" : "en";
+      localStorage.setItem("lang", newLang);
+      applyLanguage(newLang);
+    }
+
+    function applyLanguage(lang) {
+      const elements = document.querySelectorAll("[data-en]");
+      elements.forEach(el => {
+        el.textContent = el.getAttribute(`data-${lang}`);
+      });
+      const langBtn = document.querySelector(".lang-toggle");
+      langBtn.textContent = lang === "en" ? "🌐 عربي" : "🌐 English";
+      document.body.dir = lang === "ar" ? "rtl" : "ltr";
+    }
+
+    window.addEventListener("DOMContentLoaded", () => {
+      const savedLang = localStorage.getItem("lang") || "en";
+      applyLanguage(savedLang);
+    });
   </script>
 </body>
 </html>
