--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
   <!-- سكريبتات -->
   <script src="background.js"></script>
   <script>
-    function toggleMenu() {
-      const menu = document.getElementById("menuList");
-      menu.classList.toggle("hidden");
-      menu.classList.toggle("fade-in");
+      function toggleMenu() {
+  const menu = document.getElementById("menuList");
+  menu.classList.toggle("show");
+  menu.classList.toggle("hidden");
+  menu.classList.toggle("fade-in");
     }
 
     function toggleLanguage() {
