--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="navbar">
     <div class="container">
       <button class="menu-button" onclick="toggleMenu()">☰ Menu</button>
-      <button class="lang-toggle" onclick="toggleLanguage()">🌐 عربي</button>
+      <button class="lang-toggle" onclick="toggleLanguage()">🌐</button>
       <nav id="menuList" class="menu-list hidden">
         <a href="index.html" data-en="Home" data-ar="الرئيسية">Home</a>
         <a href="info.html" data-en="Info" data-ar="معلومات">Info</a>
