--- a/info.html
+++ b/info.html
@@ -15,12 +15,12 @@
 
 <!-- القائمة الجانبية -->
 <div class="menu-list" id="menuList">
-  <a href="index.html">الرئيسية</a>
-  <a href="info.html">المعلومات</a>
-  <a href="projects.html">المشاريع</a>
-  <a href="channels.html">القنوات</a>
-  <a href="contact.html">للتواصل</a>
-  <a href="shop.html">المنتجات</a>
+<a href="index.html" data-en="Home" data-ar="الرئيسية">Home</a>
+        <a href="info.html" data-en="Info" data-ar="معلومات">Info</a>
+        <a href="projects.html" data-en="Projects" data-ar="مشاريع">Projects</a>
+        <a href="channels.html" data-en="Channels" data-ar="القنوات">Channels</a>
+        <a href="contact.html" data-en="Contact" data-ar="للتواصل">Contact</a>
+        <a href="products.html" data-en="Products" data-ar="المنتجات">Products</a>
 </div>
 
 <!-- المحتوى -->
