--- a/channels.html
+++ b/channels.html
@@ -27,25 +27,26 @@
   <!-- المحتوى الرئيسي -->
   <main class="main-content">
     <h1 class="main-title" data-en="Channels" data-ar="القنوات">Channels</h1>
+    <p class="main-subtitle" data-en="Official groups and links" data-ar="روابطنا الرسمية والجروبات">Official groups and links</p>
 
-    <section class="channels-section">
-      <a href="https://t.me/support_group" class="info-box link-box" target="_blank">
-        <h3 data-en="Support Group" data-ar="جروب الدعم">Support Group</h3>
-        <p data-en="Join our support group on Telegram" data-ar="انضم لجروب الدعم على تيليجرام">
-          Join our support group on Telegram
-        </p>
-      </a>
+    <section class="profile-container channels-section">
+      <div class="info-box link-box" style="animation-delay: 0s;">
+        <a href="https://t.me/support_group" target="_blank">
+          <h3 data-en="Support Group" data-ar="جروب الدعم">Support Group</h3>
+          <p data-en="Join our support group on Telegram" data-ar="انضم لجروب الدعم على تيليجرام">Join our support group on Telegram</p>
+        </a>
+      </div>
 
-      <a href="https://t.me/official_channel" class="info-box link-box" target="_blank">
-        <h3 data-en="Official Channel" data-ar="قناتنا الرسمية">Official Channel</h3>
-        <p data-en="Follow our official news & updates" data-ar="تابع أخبارنا وآخر التحديثات">
-          Follow our official news & updates
-        </p>
-      </a>
+      <div class="info-box link-box" style="animation-delay: 0.3s;">
+        <a href="https://t.me/official_channel" target="_blank">
+          <h3 data-en="Official Channel" data-ar="القناة الرسمية">Official Channel</h3>
+          <p data-en="Follow our latest news and updates" data-ar="تابع آخر أخبارنا وتحديثاتنا">Follow our latest news and updates</p>
+        </a>
+      </div>
     </section>
   </main>
 
-  <!-- السكربت الخاص بتبديل اللغة -->
+  <!-- سكربت اللغة -->
   <script>
     function toggleLanguage() {
       const body = document.body;
