--- a/channels.html
+++ b/channels.html
@@ -29,20 +29,20 @@
     <h1 class="main-title" data-en="Channels" data-ar="القنوات">Channels</h1>
     <p class="main-subtitle" data-en="Official groups and links" data-ar="روابطنا الرسمية والجروبات">Official groups and links</p>
 
-    <section class="profile-container channels-section">
-      <div class="info-box link-box" style="animation-delay: 0s;">
-        <a href="https://t.me/support_group" target="_blank">
-          <h3 data-en="Support Group" data-ar="جروب الدعم">Support Group</h3>
-          <p data-en="Join our support group on Telegram" data-ar="انضم لجروب الدعم على تيليجرام">Join our support group on Telegram</p>
-        </a>
-      </div>
+    <section class="channels-section">
+  <div class="channel-card" style="animation-delay: 0s;">
+    <a href="https://t.me/support_group" target="_blank">
+      <h3 data-en="Support Group" data-ar="جروب الدعم">Support Group</h3>
+      <p data-en="Join our support group on Telegram" data-ar="انضم لجروب الدعم على تيليجرام">Join our support group on Telegram</p>
+    </a>
+  </div>
 
-      <div class="info-box link-box" style="animation-delay: 0.3s;">
-        <a href="https://t.me/official_channel" target="_blank">
-          <h3 data-en="Official Channel" data-ar="القناة الرسمية">Official Channel</h3>
-          <p data-en="Follow our latest news and updates" data-ar="تابع آخر أخبارنا وتحديثاتنا">Follow our latest news and updates</p>
-        </a>
-      </div>
+  <div class="channel-card" style="animation-delay: 0.3s;">
+    <a href="https://t.me/official_channel" target="_blank">
+      <h3 data-en="Official Channel" data-ar="القناة الرسمية">Official Channel</h3>
+      <p data-en="Follow our latest news and updates" data-ar="تابع آخر أخبارنا وتحديثاتنا">Follow our latest news and updates</p>
+    </a>
+  </div>
     </section>
   </main>
 
