--- a/channels.html
+++ b/channels.html
@@ -31,14 +31,14 @@
 
     <section class="channels-section">
   <div class="channel-card" style="animation-delay: 0s;">
-    <a href="https://t.me/support_group" target="_blank">
+    <a href="https://chat.whatsapp.com/EsVYfUKsZk29YX0e3RowUw" target="_blank">
       <h3 data-en="Support Group" data-ar="جروب الدعم">Support Group</h3>
       <p data-en="Join our support group on Telegram" data-ar="انضم لجروب الدعم على تيليجرام">Join our support group on Telegram</p>
     </a>
   </div>
 
   <div class="channel-card" style="animation-delay: 0.3s;">
-    <a href="https://t.me/official_channel" target="_blank">
+    <a href="https://whatsapp.com/channel/0029VbAsHQU0wajmNk6AO030" target="_blank">
       <h3 data-en="Official Channel" data-ar="القناة الرسمية">Official Channel</h3>
       <p data-en="Follow our latest news and updates" data-ar="تابع آخر أخبارنا وتحديثاتنا">Follow our latest news and updates</p>
     </a>
