--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- واجهة البداية -->
+  <div class="start-screen">
+    <div class="glow-sphere"></div>
+  </div>
+
   <!-- شريط علوي -->
   <header class="navbar">
     <div class="container">
@@ -26,12 +32,14 @@
 
   <!-- المحتوى الرئيسي -->
   <main class="main-content">
-    <h1 class="main-title" data-en="Welcome to Alastor's Bloody Realm" data-ar="مرحبًا بك في عالم ألاستور الدموي">
-      Welcome to Alastor's Bloody Realm
-    </h1>
-    <p class="main-subtitle" data-en="Explore the dark side of creativity & code 🩸" data-ar="اكتشف الجانب المظلم من الإبداع والبرمجة 🩸">
-      Explore the dark side of creativity & code 🩸
-    </p>
+    <section id="home">
+      <h1 class="main-title" data-en="Welcome to Alastor's Bloody Realm" data-ar="مرحبًا بك في عالم ألاستور الدموي">
+        Welcome to Alastor's Bloody Realm
+      </h1>
+      <p class="main-subtitle" data-en="Explore the dark side of creativity & code 🩸" data-ar="اكتشف الجانب المظلم من الإبداع والبرمجة 🩸">
+        Explore the dark side of creativity & code 🩸
+      </p>
+    </section>
   </main>
 
   <!-- سكريبتات -->
@@ -62,7 +70,16 @@
     window.addEventListener("DOMContentLoaded", () => {
       const savedLang = localStorage.getItem("lang") || "en";
       applyLanguage(savedLang);
+
+      const glowSphere = document.querySelector(".glow-sphere");
+      if (glowSphere) {
+        glowSphere.addEventListener("click", () => {
+          document.body.classList.add("show-main");
+          document.querySelector(".start-screen").classList.add("hidden");
+        });
+      }
     });
   </script>
+
 </body>
 </html>
