--- a/contact.html
+++ b/contact.html
@@ -33,18 +33,13 @@
       Feel free to summon me anytime... 🩸
     </p>
 
-    <section class="info-boxes" style="margin-top: 40px;">
-      <div class="info-box" data-en="Email: alastor@hellmail.com" data-ar="البريد: alastor@hellmail.com">
-        Email: byzaryws@gmail.com
-      </div>
-      <div class="info-box" data-en="WhatsApp: +123456789" data-ar="واتساب: +123456789">
-        WhatsApp:  https://wa.me/213799465270
-      </div>
-      <div class="info-box" data-en="Twitter: @RadioDemon" data-ar="تويتر: @RadioDemon">
-        Twitter: @RadioDemon
-      </div>
-    </section>
-
+  <div class="square-menu">
+  <div class="square" onclick="window.open('https://whatsapp.com/channel/EXAMPLE123', '_blank')">
+    <i class="fab fa-whatsapp"></i>
+    <span>قناة واتساب</span>
+  </div<
+    
+  </div>
     <!-- يمكنك لاحقًا إضافة نموذج تواصل هنا إن أحببت -->
   </main>
 
