--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Creepster&display=swap">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <!-- الشريط العلوي -->
@@ -36,10 +38,13 @@
   <div class="square-menu">
   <div class="square" onclick="window.open('https://whatsapp.com/channel/EXAMPLE123', '_blank')">
     <i class="fab fa-whatsapp"></i>
-    <span>قناة واتساب</span>
-  </div<
-    
+    <span class="engraved-text">قناة واتساب</span>
   </div>
+  <div class="square" onclick="window.open('https://wa.me/213799465270', '_blank')">
+    <i class="fas fa-comments"></i>
+    <span class="engraved-text">شات واتساب</span>
+  </div>
+</div>
     <!-- يمكنك لاحقًا إضافة نموذج تواصل هنا إن أحببت -->
   </main>
 
