--- a/contact.html
+++ b/contact.html
@@ -11,20 +11,32 @@
 </head>
 <body>
   <!-- الشريط العلوي -->
-  <header class="navbar">
-    <div class="container">
-      <button class="menu-button" onclick="toggleMenu()">☰ Menu</button>
-      <button class="lang-toggle" onclick="toggleLanguage()">🌐</button>
-      <nav id="menuList" class="menu-list hidden">
-        <a href="index.html" data-en="Home" data-ar="الرئيسية">Home</a>
-        <a href="info.html" data-en="Info" data-ar="معلومات">Info</a>
-        <a href="projects.html" data-en="Projects" data-ar="مشاريع">Projects</a>
-        <a href="channels.html" data-en="Channels" data-ar="القنوات">Channels</a>
-        <a href="contact.html" data-en="Contact" data-ar="للتواصل">Contact</a>
-        <a href="products.html" data-en="Products" data-ar="المنتجات">Products</a>
-      </nav>
-    </div>
-  </header>
+  <nav id="menuList" class="menu-list hidden">
+  <div class="menu-square" onclick="window.location.href='index.html'">
+    <i class="fas fa-home"></i>
+    <span class="engraved-text" data-en="Home" data-ar="الرئيسية">الرئيسية</span>
+  </div>
+  <div class="menu-square" onclick="window.location.href='info.html'">
+    <i class="fas fa-info-circle"></i>
+    <span class="engraved-text" data-en="Info" data-ar="معلومات">معلومات</span>
+  </div>
+  <div class="menu-square" onclick="window.location.href='projects.html'">
+    <i class="fas fa-tools"></i>
+    <span class="engraved-text" data-en="Projects" data-ar="مشاريع">مشاريع</span>
+  </div>
+  <div class="menu-square" onclick="window.location.href='channels.html'">
+    <i class="fas fa-tv"></i>
+    <span class="engraved-text" data-en="Channels" data-ar="القنوات">القنوات</span>
+  </div>
+  <div class="menu-square" onclick="window.location.href='contact.html'">
+    <i class="fas fa-phone"></i>
+    <span class="engraved-text" data-en="Contact" data-ar="للتواصل">للتواصل</span>
+  </div>
+  <div class="menu-square" onclick="window.location.href='products.html'">
+    <i class="fas fa-shopping-bag"></i>
+    <span class="engraved-text" data-en="Products" data-ar="المنتجات">المنتجات</span>
+  </div>
+</nav>
 
   <!-- محتوى صفحة التواصل -->
   <main class="main-content">
